Fix z-index

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -16,6 +16,7 @@ nav {
   background: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(10px);
   transition: 0.3s ease all;
+  z-index: 100;
 }
 
 nav.scrolled {
